Merge remote-tracking branch 'uckelman-working2'
Conflicts:
	pom.xml
	src/VASSAL/Info.java
	src/VASSAL/build/GameModule.java
	src/VASSAL/build/module/BasicCommandEncoder.java
	src/VASSAL/build/module/SpecialDiceButton.java
	src/VASSAL/build/module/SpecialDie.java
	src/VASSAL/launch/AbstractLaunchAction.java
	src/VASSAL/launch/Editor.java
	src/VASSAL/launch/Launcher.java
	src/VASSAL/launch/ModuleManager.java
	src/VASSAL/tools/MemoryUtils.java
	src/VASSAL/tools/concurrent/EDT.java
	src/VASSAL/tools/concurrent/EDTExecutorService.java
	src/VASSAL/tools/concurrent/EDTRunnableFuture.java
	src/VASSAL/tools/concurrent/Progressor.java
	src/VASSAL/tools/image/ImageIOImageLoader.java
	src/VASSAL/tools/image/tilecache/ImageDiskCache.java
	src/VASSAL/tools/image/tilecache/ImageToTiles.java
	src/VASSAL/tools/image/tilecache/TileSlicer.java
	src/VASSAL/tools/image/tilecache/TileTask.java
	src/VASSAL/tools/image/tilecache/TileUtils.java
	src/VASSAL/tools/io/IOUtils.java
	src/VASSAL/tools/io/ProcessCallable.java
	src/VASSAL/tools/lang/Reference.java
	src/VASSAL/tools/swing/ProgressDialog.java
	test/VASSAL/tools/image/ImageIOImageLoaderTest.java
	test/VASSAL/tools/swing/ProgressDialogTest.java

git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@7706 67b53d14-2c14-4ace-a08f-0dab2b34000c